Добавлена валидация формата даты и проверка на пустую строку

--- a/stars-talk.csproj
+++ b/stars-talk.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Знаки_зодиака3.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
